@@ -1,5 +1,10 @@
 2007-08-13  Mike Kestner  <mkestner@novell.com>
 
+	* generator/MethodBody.cs : finally kill the s/out ref/ref/ hack.
+	* generator/Parameter.cs : ditto.
+
+2007-08-13  Mike Kestner  <mkestner@novell.com>
+
 	* generator/ByRefGen.cs : implement IManualMarshaler.
 	* generator/Parameter.cs : use StructParameter for ByRefGen.
 
